syntax = "proto3";
package HelloHelloWorld;
option csharp_namespace = "ClusterHelloWorld.Messages";

//dotnet run -p ../../../protobuf/ProtoGrainGenerator/ProtoGrainGenerator.csproj --framework net5.0 many *.proto

message HelloRequest {}
message HelloResponse {
    string Message=1;
}

service HelloGrain {
	rpc SayHello(HelloRequest) returns (HelloResponse) {}
}